test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Private_Key/GET_api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Mon, 22 Dec 2025 02:58:38 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="Zq4p6cazVdEdf5XZ6/gj5MG8DfvWkK2b", algorithm=MD5, qop="auth", stale=false
X-Xgen-Up-Proto: HTTP/2

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}